--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Simple Movie,TV App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "mocha",
+    "start": "node app.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "Vaibhav Acharya",
   "license": "ISC",
@@ -13,13 +15,31 @@
     "body-parser": "^1.17.2",
     "compression": "^1.7.3",
     "ejs": "^2.5.7",
+    "request": "^2.88.0",
     "express": "^4.15.4",
     "express-minify-html": "^0.12.0",
     "moment": "^2.18.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
     "node-fetch": "^2.1.2",
-    "nodemon": "^1.11.0",
-    "request": "^2.81.0"
+    "nodemon": "^1.11.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-wesbos": "0.0.19",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.3.0",
+    "mocha": "^6.1.4",
+    "prettier": "^1.16.4",
+    "selenium-webdriver": "^4.0.0-alpha.4",
+    "supertest": "^4.0.2"
   }
 }
