--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chromedriver": "^2.12.0",
     "compression": "^1.7.3",
     "ejs": "^2.5.7",
-    "request": "^2.88.0",
     "express": "^4.15.4",
     "express-minify-html": "^0.12.0",
     "moment": "^2.18.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
     "node-fetch": "^2.1.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
