--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "chromedriver": "^87.0.3",
     "compression": "^1.7.3",
     "ejs": "^3.1.7",
+    "ejs-lint": "^2.0.0",
     "express": "^4.17.1",
-    "express-minify-html": "^0.12.0",
+    "express-minify-html": "^0.10.0",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "node-fetch": "^2.1.2",
@@ -37,7 +38,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.3.0",
-    "mocha": "^7.1.2",
+    "mocha": "^10.2.0",
     "prettier": "^1.16.4",
     "selenium-webdriver": "^4.0.0-alpha.4",
     "supertest": "^4.0.2"
