--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "popcorn",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Simple Movie,TV App",
   "main": "app.js",
   "scripts": {
@@ -13,33 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "chromedriver": "^87.0.3",
     "compression": "^1.7.3",
-    "ejs": "^3.1.7",
-    "ejs-lint": "^2.0.0",
     "express": "^4.17.1",
     "express-minify-html": "^0.10.0",
-    "mongoose": "^5.9.14",
-    "morgan": "^1.10.0",
     "node-fetch": "^2.1.2",
-    "nodemon": "^2.0.4",
-    "request": "^2.88.0"
+    "ejs": "^3.1.7"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "chai": "^4.2.0",
     "eslint": "^5.14.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.3.0",
     "mocha": "^10.2.0",
-    "prettier": "^1.16.4",
     "selenium-webdriver": "^4.0.0-alpha.4",
     "supertest": "^4.0.2"
   }
